css/styles.css
/* ... */
.collapsible__list--margin {
  margin-top: 0.5rem;
  margin-bottom: 0;
}

.collapsible--expanded .collapsible__chevron {
  transform: rotate(0);
}

.collapsible--expanded .collapsible__content {
  max-height: 100vh;/*это для того чтобы сделать плавное отображение*/
  opacity: 1;
}


/* Blocks */
.block {
  --padding-vertical: 6rem; /*доступен в .block and its children*/
  padding: var(--padding-vertical) 2rem;
}

.block__header {
  text-align: center;
  font-size: 2rem;
  color: hsl(251deg, 6%, 60%);
  letter-spacing: 1px;
}

.block__heading {
  margin-top: 0;
  font-size: 3rem;
  letter-spacing: 0.1rem;
  font-weight: 600;
}

.block--dark {
  background-color: #000;
  color: #7b858b;
}

.block--skewed--left {
  clip-path: polygon(0 0, 100% 0%, 100% 90%, 0 100%);
  padding-bottom: calc(var(--padding-vertical) + 4rem); 
}

.block--skewed--right {
  clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 90%);
  padding-bottom: calc(var(--padding-vertical) + 4rem); 
}

.container {
  max-width: 1140px;
  margin: 0 auto;
}


/* Navigation bar */
.nav {
  background-color: #000;
  padding: 0 1rem;
  position: fixed;
  top: 0;
  z-index: 2; /*потому что callout элемент имеет z-индекс 1*/
  width: 100vw;
}

.nav > .list {
  margin: 0;
}

.nav__menu-icon {
  cursor: pointer;
  opacity: 0.5;
}

.logo {
  object-fit: cover;
}

.collapsible__link {
  color: hsl(251deg, 10%, 80%);
  font-size: 2rem;
}

.nav__menu-icon:hover { 
  fill: #fff;
  opacity: 1;
}

.collapsible__link:hover {
  color: #fff;
}

.list__item-with-border {
  border-bottom: 1px solid hsl(251deg, 0%, 15%);
}

.list__item-with-padding {
  padding: 0.3rem 2rem;
}


.nav.collapsible--expanded .nav__menu-icon { 
  /* два класса объеденены потом что хотим чтобы правило было когда доступны эти два класса */
  fill: #fff;
  box-shadow: 0 0 0 3px gray;
  border-radius: 5px;
  box-sizing: content-box;
  opacity: 1;
}

@media screen and (min-width:768px) {
  .nav {
    display: flex;
    justify-content: space-between;
  }

  .nav__menu-icon {
    display: none;
  }

  .collapsible__content {
    max-height: 100%;
    opacity: 1;
    display: flex;
  }

  .list__item-with-border {
    border: 0;
  }

  .collapsible__link {
    font-size: 1.6rem;
  }
}


/* Hero - banner - first block presentation of site */
.hero__text {
  padding: 2rem 0 5rem;
}

.hero__content .block__heading {
  font-size: 6rem;
  padding: 3rem 0;
}

.hero__content .button {
  width: 250px;
  margin: auto;
}

.link-with-padding {
  display: flex ;
  align-items: center;
  justify-content: center;
}


@media screen and (min-width:768px) {
  .hero__content {
    text-align: start;
    align-self: center;
  }

  .hero__content .button {
    margin: 0;
  }

  .hero__content .block__heading {
    font-size: 7.5rem;
    padding: 0;
  }
}

/* Optimizing images */
/* Картинка героя - баннера - 1532х1656 - это слишком много и она весит около 1 мегабайта. */
/* Оптимизация - нам надо узнать какое максимальное значение ширины будет у картинки и сделать ее такой ширины */
/* У нас стоит ограничение на .container - max-width - 1140px. Картинка занимает половину - 570 - делаем такую ширину */
/* Не забываем что для айфонов надо предоставить 2х версию картинки - 1140px */
/* ВАЖНО! картинку надо уменьшать постепенно - сначала делаем 1140рх, потом 570 */


/* Domain block - то что идет ниже баннера */
.domain-block {
  color: var(--color-heading);
}

.domain-block .block__header{
  letter-spacing: 0;
  margin-bottom: 3.5rem;
}

.list--grid {
  grid-template-columns: 1fr 1fr;
  justify-items: center;
}

.domain-list__item {
  margin: 1rem;
  font-size: 2rem;
  font-weight: 600;
  min-width: 100px;
  padding: 0.75rem;
  cursor: pointer;
}

.domain-list__item:hover {
  border-radius: var(--border-radius);
  text-align: center;
  white-space: nowrap;
  color: #fff;
  background-color: var(--color-secondary);
}

@media screen and (min-width: 780px) { /*780px выбрал потому что при 775рх возникает смещение длинных названий*/
  .list--grid {
    display: flex;
    justify-content: center;
  }
}


/* Plans block */
@media screen and (min-width: 1024px) {
  .plan-block {
    display: flex;
    align-items: center;
    justify-content: center;
  }
}


/* Features block */
.feature-block__head {
  padding-bottom: 0;
}

.feature-header .block__header{
  text-align: start;
  letter-spacing: 0;
}

.feature-header .icon-container {
  margin-bottom: 1rem;
}

.feature-header {
  margin-bottom: 3rem;
}

.feature-header .link-arrow {
  padding: 0;
}

@media screen and (min-width: 768px) {
  .feature-block:nth-child(even) .feature-header {
    order: 2;
  }
}

@media screen and (min-width: 1024px) {
  .feature-header .block__heading {
    font-size: 3rem;
  }

  .feature-header .block__header {
    font-size: 1.8rem;
  }
}


/* Showcase block */
.showcase-block .block__header {
  margin-bottom: 4rem;
}

.showcase-block .list {
  margin: 0;
}

@media screen and (min-width: 768px) {
  .showcase-block .grid {
    justify-content: end;
    grid-template-columns: auto 40%;
    margin: auto;
  }

  .showcase-block .large__image {
    width: 700px;
  }
}

@media screen and (min-width: 1160px) {
  .showcase-block {
    padding-bottom: 10rem;
  }

  .showcase-block .grid {
    justify-content: center;
  }
}

/* Testimonial block */
.testimonial-block .block__header {
  letter-spacing: 0;
  margin-bottom: 3rem;
}

/* Footer */
.footer__and__callout {
  display: flex;
  flex-direction: column;
  position: relative;
}

.footer {
  background-color: rgb(44, 43, 43);
  padding-top: 8rem;
  position: relative;
}

.footer__logo-block {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  padding: 3rem 0;
  font-size: 1.7rem;
  text-align: center;
}


.footer__and__callout .callout {
  position: relative;
  top: 5rem;
  z-index: 1;
}
/* ... */

